# rust-experiments

./: .gitignore  Dockerfile.template  README.md  factorial.maroon  factorial_bytecode.json  factorial_bytecode_new.json  fmt.sh  maroon_bytecode_schema.json  maroon_dsl_design.md  maroon_dsl_summary.md  maroon_transpiler.py  rustfmt.toml  stream-2025-04-16.md  test_implementations.sh
.github/workflows/: run.yml
cpp_validator/: Makefile  README.md  maroon_validator.cpp
lib/: http.rs  ws_html.rs
lib/templates/: json.html  markdown.html  ws.html
step00_hw/: Dockerfile  run.sh
step00_hw/code/src/: main.rs
step01_cmdline/: Dockerfile  run.sh
step01_cmdline/code/: Cargo.toml
step01_cmdline/code/src/: main.rs
step02_httpserver/: run.sh
step02_httpserver/code/: Cargo.toml  build.rs
step02_httpserver/code/lib/: http.rs
step02_httpserver/code/src/: demo.md  jsontemplate.html  main.rs  sample.json
step02_server/: Dockerfile  run.sh
step02_server/code/: Cargo.toml
step03_mermaid/: .gitignore  Dockerfile  mermaid.md  run.sh
step03_mermaid/code/: Cargo.toml
step03_mermaid/code/src/: main.rs
step04_pest/: Dockerfile
step04_pest/code/: Cargo.toml
step04_pest/code/src/: grammar.pest  ident.pest  main.rs
step05_test/: run.sh
step05_test/code/: Cargo.toml
step06_redis/: run.sh
step06_redis/code/: Cargo.toml
step07_redb/: iteration.sh  run.sh
step07_redb/code/: Cargo.toml  README.md
step07_redb/code/src/: db.rs  jsontemplate.html  main.rs
step08_dsl/code/: Cargo.toml
step08_maxminddb/: .gitignore  run.sh
step08_maxminddb/code/: Cargo.toml
step09_wasm/: run.sh  server.sh
step09_wasm/code/: Cargo.toml
step10_websocket/: run.sh
step10_websocket/code/: Cargo.toml
step11_ws_state_machine/: run.sh  run_example.sh
step11_ws_state_machine/code/: Cargo.toml
step11_ws_state_machine/code/examples/: tasks_dag.rs
step11_ws_state_machine/code/src/: main.rs  tasks_dag.rs
step12_ws_feed/: README.md  chatgpt-ws-trades.html  run.sh
step12_ws_feed/code/: Cargo.toml
step12_ws_feed/code/src/: main.rs
step13_maroon_json/: README.md  run.sh
step13_maroon_json/code/: Cargo.toml
(+10 files in other folders)
