[package]
name = "httpserver"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
pulldown-cmark = "0.9"
ammonia = "3.3"
