[package]
name = "httpserver"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
mime = "0.3"
redb = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
