[package]
name = "httpserver"
edition = "2021"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
hyper = { version = "1.6.0", features = ["server", "http1"] }
mime = "0.3.17"
redb = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
comrak = "0.39.0"
ammonia = "4.1.0"
