[package]
name = "ws_feed"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["json"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
redb = "2.5.0"
redis = { version = "0.30.0", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2.4"
